# multiagentz

./: .gitignore  GUIDE.md  README.md  SETUP.md  pyproject.toml
multiagentz/: __init__.py  cache.py  lead.py  llm_client.py  llm_config.py  log.py  main.py  memory.py  orchestration.py  providers.py  stack.py  utils.py
multiagentz/agents/: __init__.py  base.py  coordinator.py  files.py
multiagentz/tools/: __init__.py
stacks/: advanced_example.yaml  example.yaml  minimal.yaml  template.yaml
